# deskmate

./: .gitignore  CLAUDE.md  DEV.md  IDLE.md  NOTICE  QUAKE.md  README.md  SHIP.md  SKINS.md  THIRD_PARTY_NOTICES.md  TODO.md  get-skins-prd.md  skins-plan.md
.github/workflows/: release.yml
app/: TODO.md  main.py  package.json  pnpm-lock.yaml  requirements.txt  run-tauri-dev.sh  spike_wasm.py
app-tauri/: index.html  package.json
app-tauri/src/: App.tsx
app-tauri/src-tauri/icons/: icon.icns
app-tauri/src/components/: ActionButtons.tsx  Ghost.tsx  SkinPicker.tsx
app-tauri/src/hooks/: useBubble.ts  useGhost.ts  useOpenClaw.ts  useSkin.ts
app-tauri/src/lib/: moveWindow.ts  (+1 more)
app/icons/: icon.icns
app/skins/: LICENSE  default
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: chat.rs  e2e.rs  ghost.rs  mod.rs  ocs.rs  quake_terminal.rs  settings.rs  skin.rs  window.rs
app/src-tauri/src/ocs/: types.rs
app/src-tauri/src/openclaw/: client.rs  device_identity.rs  mod.rs  protocol.rs  types.rs
app/src-tauri/src/quake_terminal/: detect.rs  mod.rs  spawn.rs  toggle.rs
app/src-tauri/src/settings/: mod.rs  store.rs
app/src-tauri/src/skin/: loader.rs  types.rs
app/src-tauri/tests/helpers/: app.rs  green_screen.rs
app/src-tauri/tests/tests/: bleed.rs  ghost_window.rs  popup_position.rs
docs/: BTN.md  CmdAutoComplete.md  SKIN_CREATORS_GUIDE.md
memory/: BLEED.md  BTN.md  CmdAutoComplete.md  DEVICE_IDENTITY.md  IDLE.md  LIVE2D.md  QUAKE.md  SKINS.md  SWAY_CRASH.md
pics/: screenshot.apng
prototypes/godot/: README.md  main.gd  main.tscn  project.godot
prototypes/qt6/: README.md  main.py  main_pyside6.py  main_webengine.py
scripts/: live2d_viewer.py  release.py
(+78 files in other folders)
