[package]
name = "ukagaka"
version = "0.1.0"
description = "AI-powered desktop companion (Ukagaka) with OpenClaw integration"
authors = ["jdj"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ukagaka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["protocol-asset", "devtools", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
dirs = "6"
swayipc = "4.0.0"
